--- a/server/Makefile
+++ b/server/Makefile
@@ -4,18 +4,20 @@ target = Main
 
 common_src_path = $(wildcard ./common/*.cpp)
 common_obj_path=$(patsubst %.cpp, %.o, $(common_src_path))
+source_src_path = $(wildcard ./source/*.cpp)
+source_obj_path=$(patsubst %.cpp, %.o, $(source_src_path))
 
 CC = g++
-.SECONDARY: $(obj) $(common_obj_path)
+.SECONDARY: $(obj) $(common_obj_path) $(source_obj_path)
 
-all: $(common_obj_path) $(target)
+all: $(target)
 
-%:%.o
-	$(CC) $< $(common_obj_path) -o $@
+$(target): $(common_obj_path) $(source_obj_path) $(obj)
+	$(CC) -std=c++11 -Wall -g -O2 $(obj) $(common_obj_path) $(source_obj_path) -o $@
 
 %.o: %.cpp
 	$(CC) -c $< -o $@	
 
 .PHONY: clean
 clean:
-	rm -rf $(obj) $(target) $(common_obj_path)
+	rm -rf $(obj) $(target) $(common_obj_path) $(source_obj_path)
