--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 src = Main.cpp
 obj = Main.o
 target = Main
-
+select = -std=c++11 -Wall -g -O2 -lmysqlclient
 common_src_path = $(wildcard ./common/*.cpp)
 common_obj_path=$(patsubst %.cpp, %.o, $(common_src_path))
 source_src_path = $(wildcard ./source/*.cpp)
@@ -13,10 +13,10 @@ CC = g++
 all: $(target)
 
 $(target): $(common_obj_path) $(source_obj_path) $(obj)
-	$(CC) -std=c++11 -Wall -g -O2 $(obj) $(common_obj_path) $(source_obj_path) -o $@
+	$(CC) $(select) $(obj) $(common_obj_path) $(source_obj_path) -o $@
 
 %.o: %.cpp
-	$(CC) -c $< -o $@	
+	$(CC) -c $< -o $@
 
 .PHONY: clean
 clean:
